--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -2,9 +2,24 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta name="theme-color" content="#F9F9F9">
+    <meta name="robots" content="index, follow">
+    <meta property="og:url" content="https://dimitriobin.github.io/Groupomania" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Groupomania - le Réseau social" />
+    <meta property="og:description" content="Bienvenue sur le réseau social de Groupomania ! Ici vous pourrez partager avec tous vos collègues des publications sur des sujets qui vous intéressent !" />
+    <meta property="og:image" content="https://dimitriobin.github.io/Groupomania/src/assets/img/icons/icons-72x72" />
+    <meta name="twitter:card" content="website" />
+    <meta name="twitter:site" content="@groupomania" />
+    <meta name="twitter:creator" content="@groupomania" />
+    <meta name="twitter:title" content="Groupomania - le Réseau social" />
+    <meta name="twitter:description" content="Bienvenue sur le réseau social de Groupomania ! Ici vous pourrez partager avec tous vos collègues des publications sur des sujets qui vous intéressent !" />
+    <meta name="twitter:image" content="https://dimitriobin.github.io/Groupomania/src/assets/img/icons/icons-72x72" />
+    <link rel="canonical" href="https://dimitriobin.github.io/Groupomania">
+    <link rel="manifest" href="../manifest.webmanifest.json">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="../src/assets/img/icon.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
