add a meta description and a title to the head

--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -19,12 +19,13 @@
     <link rel="manifest" href="../manifest.webmanifest.json">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Bienvenue sur le réseau social de Groupomania ! Ici vous pourrez partager avec tous vos collègues des publications sur des sujets qui vous intéressent !">
     <link rel="icon" href="../src/assets/img/icon.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Groupomania</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Groupomania doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
