add new favicon

--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -20,7 +20,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Bienvenue sur le réseau social de Groupomania ! Ici vous pourrez partager avec tous vos collègues des publications sur des sujets qui vous intéressent !">
-    <link rel="icon" href="../src/assets/img/icon.png">
+    <link rel="icon" href="/favicon.png">
     <title>Groupomania</title>
   </head>
   <body>
