Add a JSON-LD script in the index.html

--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -29,5 +29,26 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- JSON-LD -->
+	<script type='application/ld+json'>
+		{
+			"@context": "http://www.schema.org",
+			"@type": "LocalBusiness",
+			"name": "Groupomania",
+			"url": "https://dimitriobin.github.io/groupomania-/",
+			"logo": "https://dimitriobin.github.io/groupomania-/assets/img/lg/logo_150.png",
+			"description": "Groupomania est une entreprise qui prend soin de ses collaborateurs",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "18 rue Vivienne",
+				"addressLocality": "Paris",
+				"addressRegion": "Île de France",
+				"postalCode": "75002",
+				"addressCountry": "France"
+			},
+			"openingHours": "Mo 09:00-18:00 Tu 09:00-18:00 We 09:00-18:00 Th 09:00-18:00 Fr 09:00-18:00"
+		}
+	</script>
   </body>
+  
 </html>
