comment the line for webmanifest

--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:description" content="Bienvenue sur le réseau social de Groupomania ! Ici vous pourrez partager avec tous vos collègues des publications sur des sujets qui vous intéressent !" />
     <meta name="twitter:image" content="https://dimitriobin.github.io/Groupomania/src/assets/img/icons/icons-72x72" />
     <link rel="canonical" href="https://dimitriobin.github.io/Groupomania">
-    <link rel="manifest" href="../manifest.webmanifest.json">
+    <!-- <link rel="manifest" href="../manifest.webmanifest.json"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Bienvenue sur le réseau social de Groupomania ! Ici vous pourrez partager avec tous vos collègues des publications sur des sujets qui vous intéressent !">
