--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -18,6 +18,7 @@
     <link rel="canonical" href="https://dimitriobin.github.io/Groupomania">
     <!-- <link rel="manifest" href="../manifest.webmanifest.json"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' blob: ">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Bienvenue sur le réseau social de Groupomania ! Ici vous pourrez partager avec tous vos collègues des publications sur des sujets qui vous intéressent !">
     <link rel="icon" href="/favicon.png">
